Fixed trade summary / transactions visibility

--- a/src/modules/transactions/less/transactions.less
+++ b/src/modules/transactions/less/transactions.less
@@ -101,6 +101,7 @@
                 }
 
                 .status-and-message {
+                    display: block;
     				line-height: 1.4rem;
                     text-align: right;
                     color: orange;
@@ -115,7 +116,7 @@
     	            }
 
                     .gasFees-message {
-                        font-size: 0.75em;
+                        font-size: 0.8em;
                     }
 
                     .tradingFees-message {
